make sidenav closable; fix layout of collapsed filter

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 $sidenav-bg-color: black;
 $sidenav-text-color: white;
-.example-spacer {
+.spacer {
   flex: 1 1 auto;
 }
 mat-toolbar-row {
