--- a/src/app/map/searchbar/searchbar.component.scss
+++ b/src/app/map/searchbar/searchbar.component.scss
@@ -4,26 +4,31 @@
   flex-grow: 1;
   max-width: 60vw;
 }
+
 mat-toolbar-row form {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-grow: 1;
 }
+
 mat-toolbar-row mat-form-field {
   margin-top: 15px;
 
 }
+
 .input-group {
-  margin-top: 15px;
+  margin: 10px;
 }
 
 h1.intro-heading {
   margin-bottom: 0;
 }
+
 .label-container {;
-  flex-shrink: 1;
+flex-shrink: initial;
 }
+
 #filter-container {
   display: flex;
   gap: 15px;
@@ -36,6 +41,7 @@ h1.intro-heading {
   align-items: center;
   min-width: 360px;
 }
+
 .input-group {
   gap: 15px;
   min-width: min-content;
@@ -63,40 +69,53 @@ h1.intro-heading {
 #locationSearchField {
   width: 100%;
 }
+
 #filter-form {
   display: flex;
 }
+
 .input-container.colapsed {
   flex-grow: 1;
   float: left;
   max-width: 400px;
 }
 
+.input-container.colapsed {
+  max-width: 45vw;
+}
+
+#filter-container .mat-mdc-form-field {
+  max-width: 45vw;
+}
+
+.colapsed #filter-container .mat-mdc-form-field {
+  max-width: 22vw;
+}
+
 @media only screen and (max-width: 680px) {
   .row-form-container {
     max-width: 95vw;
   }
+
   .mat-mdc-form-field {
     width: 100%;
     flex-shrink: initial;
   }
   #locationSearchField {
     width: 100%;
-    flex-shrink: 1;
-  }
-
-  .input-container.colapsed {
-    max-width: 300px;
+  flex-shrink: initial;
   }
 }
+
 @media only screen and (max-width: 500px) {
-  .row-form-container {
-    max-width: 98vw;
-  }
-  .colapsed .mat-mdc-form-field {
-    flex-shrink: initial;
-  }
+
   .input-container.colapsed {
-    max-width: 200px;
+    max-width: 42vw;
+  }
+  .colapsed #filter-container .mat-mdc-form-field {
+    max-width: 20vw;
+  }
+  .input-group {
+    max-width: 100vw;
   }
 }
